--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>:b</title>
+	<style>
+		
+		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
+		background-color: #2b2b2b;
+		font-family: Arial;
+		color: #16f626;
+		}
+		ul {
+		margin: 0px;
+		padding: 0px;
+		list-style: none;
+		}
+		ul li {
+		float: left;
+		width: 200px;
+		height: 40px;
+		background-color: black;
+		opacity: .6;
+		}
+		a:link {
+		color: green;
+		background-color: black;
+		text-decoration: none;
+		}
+	</style>
+	</head>
+	<body>
+	<h1 style="text-align: center;">Cy6or9's </h1>
+	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+		<nav>
+			<ul>
+				<li><a>News</a></li>
+				<li><a>Spoonfeeds</a></li>
+				<li><a>Links</a></li>
+				<li><a>Tools</a></li>
+				<li><a>Contact</a></li>
+			</ul>
+		</nav>
+	
+	<h4 style="text-align: left;">_</h4>
+	<h1 style="text-align: center;">Cyber Blog's</h1>
+	
+	
 
+	<h2 style="text-align: center;">Simplefite</h2>
+
+	<img src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
+
+	<p>Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
+	selection and walk away once you see the scan taking place. Anything labeled "loop" is set to scan infinitely and wont 
+	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
+	<a href="url">https://github.com/cy6or9/Simplefite</a>
+
+	
+	<h2 style="text-align: center;"> UUO</h2>
+	
+	<img src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
+	
+	<P>UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonamous. 
+	It combines anonsurf, torbrowser, macchanger to help keep you hidden. It's equipped with a list of onion sites and 
+	nmap to check your own ip for lose ends. This is a work in progress, so forgive the randomness for now.  I'd also like to
+	move away from using anonsurf. Stay tuned for this ones development.</P>
+	<a href="url">https://github.com/cy6or9/uuo</a>
+	<h2 style="text-align: center;">Torrenting anonamously</h2>
+
+	<img src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
+
+	<p>
+	DO NOT torrent copyright material while testing. Find something free and preferably big. The bigger, the more time you'll 
+	have to analyze the peer and tracker list while downloading. Use a VPN that supports torrents. Know your original ip and watch the peer list
+	for it. If your actual IP is shown your VPN is crap.</p>
+	<p>An easier way to test it is download checkmytorrentip tool here</p>
+	<p>http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent</p>
+	<p>watch the tracker list to see if your ip is shown.
+	If you do this without seeing your actual IP, then your ready to torrent 
+	anonymously. Always keep an eye on the peer list. VPNs can fail and dump 
+	your ip occasionally, all depends on the VPN.
+	FYI, they don't send a letter anymore warning of pirating copyright 
+	material, They disconnect your whole network until you acknowledge the 
+	warning on your device.</p>
+
+
+	</body>
+
+
+	<footer color="#16f626">I make websites for $. contact me at cy6or9@yahoo.com if interested</footer>
+</html>
