--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 	
 	<h4 style="text-align: left;">_</h4>
 	<h1 style="text-align: center;">Cyber Blog's</h1>
+		
+		<p>Hello I'm Cy6or9, Welcome to my Cyber Blogs. In my free time I'm a security specialist that tests exploits on
+		myself and other colleagues to make people aware of the dangers in not practicing better security techniques. 
+		Here you'll find news and some of my own twists to some major exploits, amongst other things. Feel free to bookmark
+		this page to stay tuned to my cyber adventures. Enjoy!</p>
 	
 	
 
