--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		opacity: .6;
 		}
 		a:link {
-		color: green;
+		color:#09FF1A;
 		background-color: black;
-		text-decoration: none;
+		text-decoration: underline;
 		}
 	</style>
 	</head>
@@ -33,10 +33,10 @@
 	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
 		<nav>
 			<ul>
-				<li><a>News</a></li>
-				<li><a>Spoonfeeds</a></li>
-				<li><a>Links</a></li>
-				<li><a>Contact</a></li>
+				<li><a href="#">News</a></li>
+				<li><a href="#">Spoonfeeds</a></li>
+				<li><a href="#">Links</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 	
