news, links and spoonfeeds added

--- a/links.html
+++ b/links.html
@@ -43,4 +43,4 @@
 	<h4 style="text-align: left;">_</h4>
     <h1 style="text-align: center;">Cyber Blog's</h1>
     <h3 style="text-align: left;"External Links</h3>
-        <a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Coronavirus COVID-19 Global Cases Map</a>
+        <a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free Coronavirus COVID-19 Global Cases Map</a>
