--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -26,6 +26,9 @@
 		background-color: black;
 		text-decoration: underline;
 		}
+        a:visited{
+        color:#09FF1A;
+        } 
 	</style>
 	</head>
 	<body>
