news, links and spoonfeeds added

--- a/links.html
+++ b/links.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>:b</title>
 	<style>
-		
 		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
 		background-color: #2b2b2b;
 		font-family: Arial;
@@ -42,8 +41,8 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	
 	<h4 style="text-align: left;">_</h4>
     <h1 style="text-align: center;">Cyber Blog's</h1>
     <h3 style="text-align: left;"External Links</h3>
         <a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free Coronavirus COVID-19 Global Cases Map</a>
+        <a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
