--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>:b</title>
 	<style>
-		
 		body {background-image: url(https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/matrix-code.gif);
 		background-color: #2b2b2b;
 		font-family: Arial;
@@ -42,40 +41,30 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	
 	<h4 style="text-align: left;">_</h4>
 	<h1 style="text-align: center;">Cyber Blog's</h1>
-		
-    <h2 style="text-align: center;">Simplefite</h2>
-
-	<img src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
-
-	<p>Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
+	<h2 style="text-align: center;">Simplefite</h2>
+    <img src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
+    <p>Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
 	selection and walk away once you see the scan taking place. Anything labeled "loop" is set to scan infinitely and wont 
 	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
-	<a href="url">https://github.com/cy6or9/Simplefite</a>
-
-	
-	<h2 style="text-align: center;"> UUO</h2>
-	
+	<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
+    <h2 style="text-align: center;"> UUO</h2>
 	<img src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
-	
-	<P>UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonamous. 
+	<p>UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonamous. 
 	It combines anonsurf, torbrowser, macchanger to help keep you hidden. It's equipped with a list of onion sites and 
 	nmap to check your own ip for lose ends. This is a work in progress, so forgive the randomness for now.  I'd also like to
-	move away from using anonsurf. Stay tuned for this ones development.</P>
-	<a href="url">https://github.com/cy6or9/uuo</a>
+	move away from using anonsurf. Stay tuned for this ones development.</p>
+	<a href="https://github.com/cy6or9/uuo">UUO</a>
 	<h2 style="text-align: center;">Torrenting anonamously</h2>
-
-	<img src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
-
-	<p>
+    <img src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
+    <p>
 	DO NOT torrent copyright material while testing. Find something free and preferably big. The bigger, the more time you'll 
 	have to analyze the peer and tracker list while downloading. Use a VPN that supports torrents. Know your original ip and watch the peer list
 	for it. If your actual IP is shown your VPN is crap.</p>
 	<p>An easier way to test it is download checkmytorrentip tool here</p>
-	<p>http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent</p>
-	<p>watch the tracker list to see if your ip is shown.
+    <a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
+    <p>watch the tracker list to see if your ip is shown.
 	If you do this without seeing your actual IP, then your ready to torrent 
 	anonymously. Always keep an eye on the peer list. VPNs can fail and dump 
 	your ip occasionally, all depends on the VPN.
