--- a/news.html
+++ b/news.html
@@ -73,6 +73,4 @@ the following link. Be weary of others.</p>
     hands, throw used tissues in the trash, wear a mask around others, disinfect and clean any thing close-by or 
     that you come into contact with. The CDC works 24/7 to protect your health, so know that anymore ttravel bans 
     issued now or in the near future are solely for your safety and I urge you to abide by them to prevent further 
-    spreading of this pandemic.
-
-</p>
+    spreading of this pandemic.</p>
