--- a/links.html
+++ b/links.html
@@ -45,4 +45,4 @@
     <h1 style="text-align: center;">Cyber Blog's</h1>
     <h3 style="text-align: left;"External Links</h3>
         <a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free Coronavirus COVID-19 Global Cases Map</a>
-        <a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
+        <a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">Download CheckMyTorrentIpTool</a>
