--- a/links.html
+++ b/links.html
@@ -49,7 +49,5 @@
 		<p>Check My Torrent IP Tool Download link</p>
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
 	</body>
-	<footer color="#16f626">I make websites for $. contact me at cy6or9@yahoo.com if interested
-	<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/69937-7-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"><img src="http://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" /></a>
-	</footer>
+	<footer color="#16f626">I make websites for $. contact me at cy6or9@yahoo.com if interested</footer>
 </html>
