--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
 		}
         	a:visited{
         	color:#09FF1A;
-		.borderexample {
+		border {
  		border-style:solid;
  		border-color:#287EC7;
 		}
