--- a/news.html
+++ b/news.html
@@ -25,10 +25,13 @@
 		background-color: black;
 		text-decoration: underline;
 		}
-        a:visited{
-        color:#09FF1A;
-        }
-	</style>
+        	a:visited{
+        	color:#09FF1A;
+		.borderexample {
+ 		border-style:solid;
+ 		border-color:#287EC7;
+		}
+		style>
 	</head>
 	<body>
 	<h1 style="text-align: center;">Cy6or9's </h1>
