news, links and spoonfeeds added

--- a/news.html
+++ b/news.html
@@ -28,8 +28,8 @@
         	a:visited{
         	color:#09FF1A;
 		border {
- 		border-style:solid;
- 		border-color:#287EC7;
+ 		border-style: solid;
+ 		border-color: black;
 		}
 		style>
 	</head>
