--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
         	a:visited{
         	color:#09FF1A;
 		border {
- 		border-style: solid;
+ 		border-style: transparent;
  		border-color: black;
 		}
 		style>
