news, links and spoonfeeds added

--- a/news.html
+++ b/news.html
@@ -27,7 +27,11 @@
 		}
         	a:visited{
         	color:#09FF1A;
-		style>
+		border {
+ 		border-style: transparent;
+ 		border-color: black;
+		}
+	</style>
 	</head>
 	<body>
 	<h1 style="text-align: center;">Cy6or9's </h1>
