--- a/news.html
+++ b/news.html
@@ -25,12 +25,14 @@
 		background-color: black;
 		text-decoration: underline;
 		}
-        	a:visited{
-        	color:#09FF1A;
-		border {
- 		border-style: transparent;
- 		border-color: black;
-		}
+        a:visited {
+        color:#09FF1A;
+        }
+        p.double {
+        border-style: double;
+        border-color: black;
+        opacity: .7;
+        }
 	</style>
 	</head>
 	<body>
