--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -51,12 +51,12 @@
 	<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
     <h2 style="text-align: center;"> UUO</h2>
 	<img src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
-	<p>UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonamous. 
+	<p>UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonymous. 
 	It combines anonsurf, torbrowser, macchanger to help keep you hidden. It's equipped with a list of onion sites and 
 	nmap to check your own ip for lose ends. This is a work in progress, so forgive the randomness for now.  I'd also like to
 	move away from using anonsurf. Stay tuned for this ones development.</p>
 	<a href="https://github.com/cy6or9/uuo">UUO</a>
-	<h2 style="text-align: center;">Torrenting anonamously</h2>
+	<h2 style="text-align: center;">Torrenting anonymously</h2>
     <img src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
     <p>
 	DO NOT torrent copyright material while testing. Find something free and preferably big. The bigger, the more time you'll 
