--- a/news.html
+++ b/news.html
@@ -71,7 +71,7 @@ the following link. Be weary of others.</p>
     face (specifically your eyes, nose, and mouth), and keep distance between you and anyone who seems ill like. If 
     you're already sick you should be checked into a hospital, cover your coughs while immediately washing your 
     hands, throw used tissues in the trash, wear a mask around others, disinfect and clean any thing close-by or 
-    that you come into contact with. The CDC works 24/7 to protect your health, so know that anymore ttravel bans 
+    that you come into contact with. The CDC works 24/7 to protect your health, so know that anymore travel bans 
     issued now or in the near future are solely for your safety and I urge you to abide by them to prevent further 
     spreading of this pandemic.</p>
     </body>
