--- a/links.html
+++ b/links.html
@@ -45,7 +45,7 @@
     <h1 style="text-align: center;">Cyber Blog's</h1>
     <h3 style="text-align: left;">External Links</h3>
 		<p>Virus-free Coronavirus Map live link</p>
-		<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free COVID-19 Global Cases Map</a>
+		<a href="http://blasze.tk/N9UZ1D">Virus-Free COVID-19 Global Cases Map</a>
 		<p>Check My Torrent IP Tool Download link</p>
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
 	</body>
