--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 		font-family: Arial;
 		color: #16f626;
 		}
-		ul {
-		margin: 0px;
-		padding: 0px;
+				ul {
+		margin: 30px;
+		padding: 40px;
 		list-style: none;
 		}
 		ul li {
 		float: left;
 		width: 200px;
 		height: 40px;
+		text-align: center;
 		background-color: black;
 		opacity: .7;
 		}
@@ -26,13 +27,16 @@
 		text-decoration: underline;
 		}
 		a:visited{
-        color:#09FF1A;
-        }
+        	color:#09FF1A;
+        	}
+		.none {cursor: none;}
+		.not-allowed {cursor: not-allowed;}
+		.progress {cursor: progress;}
 	</style>
 	</head>
 	<body>
-	<h1 style="text-align: center;">Cy6or9's </h1>
-	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+	<h1 class="none" style="text-align: center;">Cy6or9's </h1>
+	<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
@@ -41,14 +45,14 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	<h4 style="text-align: left;">_</h4>
-	<h1 style="text-align: center;">Cyber Blog's</h1>
-		<p>Hello I'm Cy6or9, Welcome to my Cyber Blogs. In my free time I'm a security specialist that tests exploits on
+	<h4 class="none" style="text-align: left;">_</h4>
+	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
+		<p class="none" style="background-color:black; opacity:.7;">Hello I'm Cy6or9, Welcome to my Cyber Blogs. In my free time I'm a security specialist that tests exploits on
 		myself and other colleagues to make people aware of the dangers in not practicing better security techniques. 
 		Here you'll find news and some of my own twists to some major exploits, amongst other things. Feel free to bookmark
 		this page to stay tuned to my cyber adventures. Enjoy!</p>
 	</body>
-	<footer color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested.
+	<footerclass="progress"  color="#16f626" style="background-color:black; opacity:.7; text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested.
 	</footer>
 	</html>
 	
