--- a/links.html
+++ b/links.html
@@ -9,14 +9,15 @@
 		color: #16f626;
 		}
 		ul {
-		margin: 0px;
-		padding: 0px;
+		margin: 30px;
+		padding: 40px;
 		list-style: none;
 		}
 		ul li {
 		float: left;
 		width: 200px;
 		height: 40px;
+		text-align: center;
 		background-color: black;
 		opacity: .7;
 		}
@@ -25,14 +26,17 @@
 		background-color: black;
 		text-decoration: underline;
 		}
-        a:visited{
-        color:#09FF1A;
-        }
+		a:visited {
+       		color:#09FF1A;
+        	}
+		.none {cursor: none;}
+		.not-allowed {cursor: not-allowed;}
+		.progress {cursor: progress;}
 	</style>
 	</head>
 	<body>
-	<h1 style="text-align: center;">Cy6or9's </h1>
-	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+	<h1 class="none" style="text-align: center;">Cy6or9's </h1>
+	<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
@@ -41,14 +45,14 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	<h4 style="text-align: left;">_</h4>
-    <h1 style="text-align: center;">Cyber Blog's</h1>
-    <h3 style="text-align: left;">External Links</h3>
+	<h4 class="none" style="text-align: left;">_</h4>
+    <h1 class="none" style="text-align: center;">Cyber Blog's</h1>
+    <h3 style="background-color: black; opacity: .7; text-align: left;">Referenced Links</h3>
 		<p>Virus-free Coronavirus Map live link</p>
 		<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free COVID-19 Global Cases Map</a>
 		<p>Check My Torrent IP Tool Download link</p>
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
 	</body>
-	<footer color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
+	<footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
 	</footer>
 </html>
