--- a/links.html
+++ b/links.html
@@ -47,10 +47,10 @@
 		</nav>
 	<h4 class="none" style="text-align: left;">_</h4>
     <h1 class="none" style="text-align: center;">Cyber Blog's</h1>
-    <h3 style="background-color: black; opacity: .7; text-align: left;">Referenced Links</h3>
-		<p>Virus-free Coronavirus Map live link</p>
+    <h3 style="background-color: black; opacity: .7; text-align: center;">Referenced Links</h3>
+		<p style="background-color: black; opacity: .7; text-align: center;">Virus-free Coronavirus Map live link</p>
 		<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free COVID-19 Global Cases Map</a>
-		<p>Check My Torrent IP Tool Download link</p>
+		<p style="background-color: black; opacity: .7; text-align: center;">Check My Torrent IP Tool Download link</p>
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
 	</body>
 	<footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
