--- a/news.html
+++ b/news.html
@@ -9,14 +9,15 @@
 		color: #16f626;
 		}
 		ul {
-		margin: 0px;
-		padding: 0px;
+		margin: 30px;
+		padding: 40px;
 		list-style: none;
 		}
 		ul li {
 		float: left;
 		width: 200px;
 		height: 40px;
+		text-align: center;
 		background-color: black;
 		opacity: .7;
 		}
@@ -25,14 +26,17 @@
 		background-color: black;
 		text-decoration: underline;
 		}
-        a:visited {
-        color:#09FF1A;
-        }
+		a:visited {
+       		color:#09FF1A;
+        	}
+		.none {cursor: none;}
+		.not-allowed {cursor: not-allowed;}
+		.progress {cursor: progress;}
 	</style>
 	</head>
 	<body>
-	<h1 style="text-align: center;">Cy6or9's </h1>
-	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
+	<h1 class="none" style="text-align: center;">Cy6or9's </h1>
+	<center><img class="none" src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
@@ -42,11 +46,11 @@
 			</ul>
 		</nav>
 	
-	<h4 style="text-align: left;">_</h4>
-    <h1 style="text-align: center;">Cyber Blog's</h1>
-<h2 style="text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
-    <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
-<p>Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
+	<h4 class="none" style="text-align: left;">_</h4>
+    <h1 class="none" style="text-align: center;">Cyber Blog's</h1>
+<h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
+    <center><img style="background-color: black; opacity: .7; text-align: center;" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
+<p style="background-color: black; opacity: .7; text-align: center;" >Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
     It's been more than a week since Reason Cybersecurity warned of a "sophisticated attack method 
 taking advantage of the trusted World Health Organization". The attack installs a keylogger onto the
 system, in which it automatically records keystrokes pressed by the user. This tool is then used to 
@@ -58,10 +62,10 @@ attackers end, he can see everything you don't want them too including credit ca
 Although the original Coronavirus map is safe and runnig virus free, beware of the fakes created in 
 these trying times to take advantage of us. The original and virus free coronavirus map can be found at 
 the following link. Be weary of others.</p>
-<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Coronavirus COVID-19 Global Cases</a>
-<h2 style="text-align: center;">Around Half of the COVID-19 Victims Have Recovered</h2>
-<center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/Get-Well-Soon.jpg" alt="getwellsoon" height="360" width="600" > </center>
-<p>Although the once thought crippling disease is still on the rise, it's good to know that more people
+<a style="background-color: black; opacity: .7; text-align: center;" href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Coronavirus COVID-19 Global Cases</a>
+<h2 style="background-color: black; opacity: .7; text-align: center;">Around Half of the COVID-19 Victims Have Recovered</h2>
+<center><img style="background-color: black; opacity: .7; text-align: center;" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/Get-Well-Soon.jpg" alt="getwellsoon" height="360" width="600" > </center>
+<p style="background-color: black; opacity: .7; text-align: center;" >Although the once thought crippling disease is still on the rise, it's good to know that more people
     are recovering everyday. The disease has been reported in 116 countries, confirmed cases are 128,392 , death 
     count is above 4,728 and the amount recovered is 69,607 and all are still climbing. According to the CDC 
     (Center for Disease Control and Prevention), People with chronic diseases and older people have a higher risk 
@@ -75,6 +79,6 @@ the following link. Be weary of others.</p>
     issued now or in the near future are solely for your safety and I urge you to abide by them to prevent further 
     spreading of this pandemic.</p>
     </body>
-    <footer color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
+    <footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
 	</footer>
 </html>
