--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -9,14 +9,15 @@
 		color: #16f626;
 		}
 		ul {
-		margin: 0px;
-		padding: 0px;
+		margin: 30px;
+		padding: 40px;
 		list-style: none;
 		}
 		ul li {
 		float: left;
 		width: 200px;
 		height: 40px;
+		text-align: center;
 		background-color: black;
 		opacity: .7;
 		}
@@ -25,13 +26,16 @@
 		background-color: black;
 		text-decoration: underline;
 		}
-        a:visited{
-        color:#09FF1A;
-        }
+		a:visited {
+       		color:#09FF1A;
+        	}
+		.none {cursor: none;}
+		.not-allowed {cursor: not-allowed;}
+		.progress {cursor: progress;}
 	</style>
 	</head>
 	<body>
-	<h1 style="text-align: center;">Cy6or9's </h1>
+	<h1 class="none" style="text-align: center;">Cy6or9's </h1>
 	<center><img src="https://1.bp.blogspot.com/-enKQt7mo1gc/UhDRiaFxjiI/AAAAAAAAARQ/OvuixQFmwd8/s1600/punisher.jpg" alt="greenskullmatrix" height="360" width="600" > </center>
 		<nav>
 			<ul>
@@ -41,30 +45,30 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	<h4 style="text-align: left;">_</h4>
-	<h1 style="text-align: center;">Cyber Blog's</h1>
-	<h2 style="text-align: center;">Simplefite</h2>
-    <img src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
-    <p>Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
+	<h4 class="none" style="text-align: left;">_</h4>
+	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
+	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
+    <img class="none" style="background-color:black; opacity:.7;" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
+    <p style="background-color:black; opacity:.7; text-align: center;">Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
 	selection and walk away once you see the scan taking place. Anything labeled "loop" is set to scan infinitely and wont 
 	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
 	<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
-    <h2 style="text-align: center;"> UUO</h2>
-	<img src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
-	<p>UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonymous. 
+    <h2 style="background-color:black; opacity:.7; text-align: center;"> UUO</h2>
+	<img class="none" style="background-color:black; opacity:.7;" src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
+	<p style="background-color:black; opacity:.7; text-align: center;">UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonymous. 
 	It combines anonsurf, torbrowser, macchanger to help keep you hidden. It's equipped with a list of onion sites and 
 	nmap to check your own ip for lose ends. This is a work in progress, so forgive the randomness for now.  I'd also like to
 	move away from using anonsurf. Stay tuned for this ones development.</p>
 	<a href="https://github.com/cy6or9/uuo">UUO</a>
-	<h2 style="text-align: center;">Torrenting anonymously</h2>
-    <img src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
-    <p>
+	<h2 style="background-color:black; opacity:.7; text-align: center;">Torrenting anonymously</h2>
+    <img class="none" style="background-color:black; opacity:.7;" src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
+    <pstyle="background-color:black; opacity:.7; text-align: center;">
 	DO NOT torrent copyright material while testing. Find something free and preferably big. The bigger, the more time you'll 
 	have to analyze the peer and tracker list while downloading. Use a VPN that supports torrents. Know your original ip and watch the peer list
 	for it. If your actual IP is shown your VPN is crap.</p>
 	<p>An easier way to test it is download checkmytorrentip tool here</p>
     <a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
-    <p>watch the tracker list to see if your ip is shown.
+    <p style="background-color:black; opacity:.7; text-align: center;">watch the tracker list to see if your ip is shown.
 	If you do this without seeing your actual IP, then your ready to torrent 
 	anonymously. Always keep an eye on the peer list. VPNs can fail and dump 
 	your ip occasionally, all depends on the VPN.
@@ -72,6 +76,6 @@
 	material, They disconnect your whole network until you acknowledge the 
 	warning on your device.</p>
 	</body>
-	<footer color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
+	<footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
 	</footer>
 </html>
