--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -48,7 +48,7 @@
 	<h4 class="none" style="text-align: left;">_</h4>
 	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
-    <img class="none" style="background-color:black; opacity:.7;" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
+    <img class="none" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
     <p style="background-color:black; opacity:.7; text-align: center;">Simplefite is a bash scripted gui, simplifying wifite. Each attack is set to automatically take place, simply choose a 
 	selection and walk away once you see the scan taking place. Anything labeled "loop" is set to scan infinitely and wont 
 	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
@@ -61,7 +61,7 @@
 	move away from using anonsurf. Stay tuned for this ones development.</p>
 	<a href="https://github.com/cy6or9/uuo">UUO</a>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Torrenting anonymously</h2>
-    <img class="none" style="background-color:black; opacity:.7;" src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
+    <img class="none" src="https://edge.alluremedia.com.au/m/g/2017/01/you-wouldnt-download-a-car.jpg" alt="description" height="300" width="400" />
     <pstyle="background-color:black; opacity:.7; text-align: center;">
 	DO NOT torrent copyright material while testing. Find something free and preferably big. The bigger, the more time you'll 
 	have to analyze the peer and tracker list while downloading. Use a VPN that supports torrents. Know your original ip and watch the peer list
