--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
 	<h4 class="none" style="text-align: left;">_</h4>
     <h1 class="none" style="text-align: center;">Cyber Blog's</h1>
 <h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
-    <center><img style="background-color: black; opacity: .7; text-align: center;" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
+    <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Incase you didn't have enough reason to be afraid of the Coronavirus, get ready for more bad news!
     It's been more than a week since Reason Cybersecurity warned of a "sophisticated attack method 
 taking advantage of the trusted World Health Organization". The attack installs a keylogger onto the
@@ -64,7 +64,7 @@ these trying times to take advantage of us. The original and virus free coronavi
 the following link. Be weary of others.</p>
 <a style="background-color: black; opacity: .7; text-align: center;" href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Coronavirus COVID-19 Global Cases</a>
 <h2 style="background-color: black; opacity: .7; text-align: center;">Around Half of the COVID-19 Victims Have Recovered</h2>
-<center><img style="background-color: black; opacity: .7; text-align: center;" src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/Get-Well-Soon.jpg" alt="getwellsoon" height="360" width="600" > </center>
+<center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/Get-Well-Soon.jpg" alt="getwellsoon" height="360" width="600" > </center>
 <p style="background-color: black; opacity: .7; text-align: center;" >Although the once thought crippling disease is still on the rise, it's good to know that more people
     are recovering everyday. The disease has been reported in 116 countries, confirmed cases are 128,392 , death 
     count is above 4,728 and the amount recovered is 69,607 and all are still climbing. According to the CDC 
