--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -54,7 +54,7 @@
 	stop until you CTRL+C the xterm window. Then you can select the "cracked" option to list any networks you achieved. </p>
 	<a href="https://github.com/cy6or9/Simplefite">Simplefite</a>
     <h2 style="background-color:black; opacity:.7; text-align: center;"> UUO</h2>
-	<img class="none" style="background-color:black; opacity:.7;" src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
+	<img class="none" src="https://raw.githubusercontent.com/cy6or9/uuo/master/uuo-main.png" alt="uuo-menu" height="300" width="400" />
 	<p style="background-color:black; opacity:.7; text-align: center;">UUO (Unidentified User Options) is another bash script, but this one is written to focus on keeping you anonymous. 
 	It combines anonsurf, torbrowser, macchanger to help keep you hidden. It's equipped with a list of onion sites and 
 	nmap to check your own ip for lose ends. This is a work in progress, so forgive the randomness for now.  I'd also like to
