--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -66,7 +66,7 @@
 	DO NOT torrent copyright material while testing. Find something free and preferably big. The bigger, the more time you'll 
 	have to analyze the peer and tracker list while downloading. Use a VPN that supports torrents. Know your original ip and watch the peer list
 	for it. If your actual IP is shown your VPN is crap.</p>
-	<p>An easier way to test it is download checkmytorrentip tool here</p>
+	<p style="background-color:black; opacity:.7; text-align: center;">An easier way to test it is download checkmytorrentip tool here</p>
     <a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
     <p style="background-color:black; opacity:.7; text-align: center;">watch the tracker list to see if your ip is shown.
 	If you do this without seeing your actual IP, then your ready to torrent 
