--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	<h4 class="none" style="text-align: left;">_</h4>
+	<h4 class="none" style="text-align: left;"></h4>
 	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
 		<p class="none" style="background-color:black; opacity:.7;">Hello I'm Cy6or9, Welcome to my Cyber Blogs. In my free time I'm a security specialist that tests exploits on
 		myself and other colleagues to make people aware of the dangers in not practicing better security techniques. 
