--- a/links.html
+++ b/links.html
@@ -45,7 +45,7 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	<h4 class="none" style="text-align: left;">_</h4>
+	<h4 class="none" style="text-align: left;"></h4>
     <h1 class="none" style="text-align: center;">Cyber Blog's</h1>
     <h3 style="background-color: black; opacity: .7; text-align: center;">Referenced Links</h3>
 		<p style="background-color: black; opacity: .7; text-align: center;">Virus-free Coronavirus Map live link</p>
