--- a/news.html
+++ b/news.html
@@ -45,8 +45,7 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	
-	<h4 class="none" style="text-align: left;">_</h4>
+	<h4 class="none" style="text-align: left;"></h4>
     <h1 class="none" style="text-align: center;">Cyber Blog's</h1>
 <h2 style="background-color: black; opacity: .7; text-align: center;">DO NOT USE "Coronavirus Maps" Old Malware Repackaged!</h2>
     <center><img src="https://raw.githubusercontent.com/cy6or9/cy6or9.github.io/master/coranavirusmap.png" height="360" width="600" > </center>
