--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -45,7 +45,7 @@
 				<li><a href="links.html">Links</a></li>
 			</ul>
 		</nav>
-	<h4 class="none" style="text-align: left;">_</h4>
+	<h4 class="none" style="text-align: left;"></h4>
 	<h1 class="none" style="text-align: center;">Cyber Blog's</h1>
 	<h2 style="background-color:black; opacity:.7; text-align: center;">Simplefite</h2>
     <img class="none" src="https://raw.githubusercontent.com/cy6or9/Simplefite/master/simplefite-menu.png" alt="description" height="300" width="400" />
