--- a/spoonfeeds.html
+++ b/spoonfeeds.html
@@ -75,6 +75,14 @@
 	FYI, they don't send a letter anymore warning of pirating copyright 
 	material, They disconnect your whole network until you acknowledge the 
 	warning on your device.</p>
+		<nav>
+			<ul>
+                <li><a href="index.html">Home</a></li>
+				<li><a href="news.html">News</a></li>
+				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
+				<li><a href="links.html">Links</a></li>
+			</ul>
+		</nav>
 	</body>
 	<footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
 	</footer>
