--- a/news.html
+++ b/news.html
@@ -77,6 +77,14 @@ the following link. Be weary of others.</p>
     that you come into contact with. The CDC works 24/7 to protect your health, so know that anymore travel bans 
     issued now or in the near future are solely for your safety and I urge you to abide by them to prevent further 
     spreading of this pandemic.</p>
+		<nav>
+			<ul>
+                <li><a href="index.html">Home</a></li>
+				<li><a href="news.html">News</a></li>
+				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
+				<li><a href="links.html">Links</a></li>
+			</ul>
+		</nav>
     </body>
     <footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
 	</footer>
