--- a/links.html
+++ b/links.html
@@ -52,6 +52,14 @@
 		<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free COVID-19 Global Cases Map</a>
 		<p style="background-color: black; opacity: .7; text-align: center;">Check My Torrent IP Tool Download link</p>
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
+		<nav>
+			<ul>
+                <li><a href="index.html">Home</a></li>
+				<li><a href="news.html">News</a></li>
+				<li><a href="spoonfeeds.html">Spoonfeeds</a></li>
+				<li><a href="links.html">Links</a></li>
+			</ul>
+		</nav>
 	</body>
 	<footer class="progress" color="#16f626" style="text-align: center;">I make websites for $. contact me at cy6or9@yahoo.com if interested 
 	</footer>
