--- a/links.html
+++ b/links.html
@@ -52,6 +52,10 @@
 		<a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">Virus-Free COVID-19 Global Cases Map</a>
 		<p style="background-color: black; opacity: .7; text-align: center;">Check My Torrent IP Tool Download link</p>
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
+		<p style="background-color: black; opacity: .7; text-align: center;"></p>
+		<a href=""></a>
+		<p style="background-color: black; opacity: .7; text-align: center;">Cy6or9's Github ppage</p>
+		<a href="https://github.com/cy6or9">https://github.com/cy6or9</a>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
