--- a/links.html
+++ b/links.html
@@ -55,7 +55,7 @@
 		<p style="background-color: black; opacity: .7; text-align: center;"></p>
 		<a href=""></a>
 		<p style="background-color: black; opacity: .7; text-align: center;">Cy6or9's Github ppage</p>
-		<a style="text-align: center;"href="https://github.com/cy6or9">https://github.com/cy6or9</a>
+		<a href="https://github.com/cy6or9">https://github.com/cy6or9</a>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
