--- a/links.html
+++ b/links.html
@@ -54,7 +54,7 @@
 		<a href="http://checkmytorrentip.net/torrentip/checkMyTorrentIp.png.torrent">CheckMyTorrentIpTool</a>
 		<p style="background-color: black; opacity: .7; text-align: center;"></p>
 		<a href=""></a>
-		<p style="background-color: black; opacity: .7; text-align: center;">Cy6or9's Github ppage</p>
+		<p style="background-color: black; opacity: .7; text-align: center;">Cy6or9's Github page</p>
 		<a href="https://github.com/cy6or9">https://github.com/cy6or9</a>
 		<nav>
 			<ul>
