--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		myself and other colleagues to make people aware of the dangers in not practicing better security techniques. 
 		Here you'll find news and some of my own twists to some major exploits, amongst other things. Feel free to bookmark
 		this page to stay tuned to my cyber adventures. Enjoy!</p>
+		<p style="text-align: center;"> Posted: 3/01/20 </p>
 		<nav>
 			<ul>
                 <li><a href="index.html">Home</a></li>
